--- a/pom.xml
+++ b/pom.xml
@@ -2,41 +2,65 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>nio</groupId>
-    <artifactId>nio</artifactId>
-    <version>1.0</version>
-    <packaging>jar</packaging>
+    <groupId>net.kolov.http.performance</groupId>
+    <artifactId>parent</artifactId>
+    <version>0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
-    <name>nio</name>
-    <url>http://maven.apache.org</url>
+    <name>Http Performance</name>
+    <url>http://git...</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <modules>
+        <module>servlet2.5</module>
+        <module>servlet3.0</module>
+        <module>grizzly</module>
+        <module>plain-nio</module>
+    </modules>
 
     <dependencies>
         <!--dependency>
             <groupId>com.sun.grizzly</groupId>
             <artifactId>grizzly-webcontainer</artifactId>
             <version>2.0.0-RC1</version>
-        </dependency-->
-        <dependency>
-        <groupId>com.sun.grizzly</groupId>
-        <artifactId>grizzly-servlet-webserver</artifactId>
-        <version>1.9.18a</version>
-    </dependency>
-        <!--
-        <dependency>
+        </dependency
             <groupId>com.sun.grizzly</groupId>
-            <artifactId>framework</artifactId>
-            <version>1.6.1</version>
+            <artifactId>grizzly-servlet-webserver</artifactId>
+            <version>1.9.18a</version>
         </dependency>
+
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>6.0</version>
+        </dependency>
+        <!- -
+
         -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
+            <version>4.8.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                       <groupId>org.apache.maven.plugins</groupId>
+                       <artifactId>maven-surefire-plugin</artifactId>
+                       <version>2.12</version>
+                   </plugin>
+                <plugin>
+                       <groupId>org.apache.maven.plugins</groupId>
+                       <artifactId>maven-war-plugin</artifactId>
+                       <version>2.2</version>
+                   </plugin>
+                </plugins>
+        </pluginManagement>
+    </build>
 </project>
